biblio-app/biblio-service.yml
apiVersion: v1
kind: Service
metadata:
  name:  biblio-svc
spec:
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: biblio
